# BoiseHighElectionSoftware

./: .breakpoints  README.md  main.py  pyproject.toml
boisevotes/: __init__.py  charts.py  db.py  oauth.py  passes.py
boisevotes/election_static/: ballot.css  landing.css  login.css  style.css
boisevotes/election_templates/: 404.html  base.html  confirm.html  dash_base.html  dash_check_in.html  dash_overview.html  dash_register.html  dash_results.html  dash_scan.html  edit_election.html  edit_race.html  elections.html  fastpass.html  landing.html  login.html  online_ballot.html
