[tool.poetry]
name = "repl_python3_BoiseHighElectionSoftware"
version = "0.1.0"
description = ""
authors = ["JackVuturo <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"
oauthlib = "^3.1.1"
requests-oauthlib = "^1.3.0"
mongoengine = "^0.23.1"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
